<resources>
    <string name="app_name">MyViewApplication</string>
    <string name="BaseDraw">绘图基础</string>
    <string name="AnimationTest">视图动画_标签</string>
    <string name="AnimationCode">视图动画_代码</string>
    <string name="ValueAnimator">属性动画_ValueAnimator</string>
    <string name="ObjectAnimator">属性动画_ObjectAnimator</string>
    <string name="VideoBanner">视频轮播</string>
    <string name="Kotlin">kotlin</string>
    <string name="strNull">null</string>
    <string name="waiting">waiting…</string>
    <string name="todo">TODO</string>
</resources>
